--- a/fengeee/fengeee-web/pom.xml
+++ b/fengeee/fengeee-web/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>commons-logging</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.parent.artifactId}</finalName>
