--- a/fengeee/pom.xml
+++ b/fengeee/pom.xml
@@ -25,6 +25,8 @@
         <lombok.version>1.16.4</lombok.version>
         <slf4j.version>1.7.12</slf4j.version>
         <commons-logging.version>1.2</commons-logging.version>
+        <logback.version>1.1.3</logback.version>
+        <aspectj.version>1.8.7</aspectj.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -139,6 +141,16 @@
                 <artifactId>commons-logging</artifactId>
                 <version>${commons-logging.version}</version>
                 <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
